2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): If the remaining bits match the PTE's
	guard, stop processing no matter what type of object the PTE
	points to.  Only use lowest GBITS of PTE_GUARD when setting the
	pivot's guard.

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as.h (AS_CHECK_SHADOW): If only the types differ and the
	difference is that the shadow capability says the type is
	cap_void, then do not error out.

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): When a guard completes an address
	translation, do not subtract the bits translated by the guard from
	REMAINING.  Only assume that capabilities that are void and have a
	zero length guard are unused.  When inserting a page table, only
	copy the pivot if it is in use.
	
	* as.h (AS_CHECK_SHADOW): New macro.
	(AS_CHECK_SHADOW2): Likewise.
	(as_ensure_full): Use them here.
	(as_insert_full): Likewise.
	(as_slot_lookup_rel_use): Likewise.
	(as_cap_lookup_rel): Likewise.
	(as_object_lookup_rel): Likewise.
	* as-build.c (as_build): Likewise.  Improve debugging output.
	* as.h (as_ensure): Change from a function to a macro.
	(as_insert_full): Correctly check the return value from cap_copy.
	* as-compute-gbits.h (as_compute_gbits_cappage): Use assertx to
	assert the conditions and to print out their values on failure.
	* as-lookup.c (as_lookup_rel): Improve debugging output.

2008-06-06  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): If a pte's guard matches but the
	designated object is not a cappage or a folio, don't match the
	guard and try to index the object, instead, indirect access to the
	object via a page table.

2008-06-06  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_init): Configure a capability's shadow when we process
	the capability, not when we process its containing cappage or
	folio.
	* storage.c (storage_check_reserve_internal): Only set up the
	shadow object if AS_INIT_DONE is true.
